<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_archived"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_archived" />

    <item
        android:id = "@+id/navigation_category"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_categories"
        />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="Switch"
        app:actionLayout="@layout/switch_item" />

</menu>