<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hbv601G.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.hbv601G.ui.category.CategoryFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.hbv601G.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_archived"
        android:name="com.example.hbv601G.ui.archived.ArchivedFragment"
        android:label="@string/title_archived"
        tools:layout="@layout/fragment_archived" />

    <!--
    <fragment
        android:id="@+id/navigation_new_task"
        android:name="com.example.hbv601G.ui.tasks.NewTaskFragment"
        android:label="New Task"
        tools:layout="@layout/fragment_new_task" />

-->
    <!-- bæta við seinna ig
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.hbv601G.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login"
        />
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.hbv601G.ui.login.SignupFragment"
        android:label="SignupFragment"
        tools:layout="@layout/fragment_signup"/>
        -->


</navigation>