<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/detailTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/detailTaskNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_note_hint"
            android:minLines="3"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/editCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/editStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/editPrioritySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/detailTaskDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date_hint"
            android:inputType="date" />

        <Button
            android:id="@+id/buttonSaveEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes_button" />

    </LinearLayout>
</ScrollView>
