<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- FILTER BAR -->

    <LinearLayout
        android:id="@+id/filterBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_purple"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewTasks"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintVertical_bias="0.202">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="8dp"
            >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:chipSpacing="8dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipThisWeek"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_this_week" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOverdue"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_overdue" />

            </com.google.android.material.chip.ChipGroup>

            <ToggleButton
                android:id="@+id/toggleFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textOff="@string/favorites_off"
                android:textOn="@string/favorites_on"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="4dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingHorizontal="8dp"
                android:background="@android:color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="4dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingHorizontal="8dp"
                android:background="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="4dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingHorizontal="8dp"
                android:background="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/filterBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="65dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>